--- a/requirements.txt
+++ b/requirements.txt
@@ -1,137 +1,14 @@
-absl-py==0.9.0
-apturl==0.5.2
-asn1crypto==0.24.0
-astor==0.8.1
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.4
-Brlapi==0.6.6
-certifi==2019.11.28
-chardet==3.0.4
-click==7.1.2
-cloudpickle==1.3.0
-command-not-found==0.3
-cryptography==2.1.4
-cupshelpers==1.0
-cycler==0.10.0
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-distro-info===0.18ubuntu0.18.04.1
-entrypoints==0.3
-Flask==1.1.2
-future==0.18.2
-gast==0.3.3
-google-pasta==0.2.0
-graphviz==0.14
-grpcio==1.28.1
-gunicorn==20.0.4
-gym==0.17.1
-h5py==2.10.0
-httplib2==0.9.2
-idna==2.8
-importlib-metadata==1.6.0
-ipykernel==5.1.4
-ipython==7.13.0
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-jedi==0.17.0
-Jinja2==2.11.2
-joblib==0.14.1
-json5==0.9.0
-jsonschema==3.2.0
-jupyter-client==5.3.4
-jupyter-core==4.6.3
-jupyterlab==1.2.6
-jupyterlab-server==1.0.6
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.2.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-macaroonbakery==1.1.3
-Mako==1.0.7
-Markdown==3.2.1
-MarkupSafe==1.1.1
-matplotlib==3.2.1
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.5
-netifaces==0.10.4
-notebook==6.0.3
-numpy==1.18.3
-oauth==1.0.1
-olefile==0.45.1
-pandas==1.0.3
-pandocfilters==1.4.2
-parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==5.1.0
-prometheus-client==0.7.1
-prompt-toolkit==3.0.5
-protobuf==3.11.3
-ptyprocess==0.6.0
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-pydotplus==2.0.2
-pyglet==1.5.0
-Pygments==2.6.1
-pygobject==3.26.1
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.1.2
-pyparsing==2.4.7
-pyRFC3339==1.0
-pyrsistent==0.16.0
-python-apt==1.6.5+ubuntu0.2
-python-dateutil==2.8.1
-python-debian==0.1.32
-pytz==2019.3
-pyxdg==0.25
-PyYAML==5.3.1
-pyzmq==18.1.1
-reportlab==3.4.0
-requests==2.22.0
-requests-unixsocket==0.1.5
-scikit-learn==0.22.2.post1
-scipy==1.4.1
-seaborn==0.10.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-simplejson==3.13.2
-six==1.14.0
-sklearn==0.0
-ssh-import-id==5.7
-system-service==0.3
-systemd-python==234
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.3
-traitlets==4.3.3
-twilio==6.35.0
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.7
-usb-creator==0.3.3
-wadllib==1.3.2
-wcwidth==0.1.9
-webencodings==0.5.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-xkit==0.0.0
-xlrd==1.2.0
-zipp==3.1.0
-zope.interface==4.3.2
+blinker==1.4
+click==6.7
+Flask==1.0.0
+Flask-HTTPAuth==3.2.3
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+gunicorn==19.7.1
+itsdangerous==0.24
+Jinja2==2.10.1
+MarkupSafe==1.0
+SQLAlchemy==1.3.0
+Werkzeug==0.16.0
+WTForms==2.1
